# oz_django5

./: .gitignore  pyproject.toml  test.sh
config/: settings.py  urls.py
tabom/: models.py  tests.py
tabom/migrations/: 0001_initial.py  0002_rename_create_at_article_created_at_and_more.py
tabom/services/: like_service.py
tabom/tests/: test_like_service.py
